# pypacker

./: .gitignore  CONTRIBUTING.md  EXTRACT_ME.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
examples/simple_plugin/: README.md
examples/simple_plugin/myplugin/: __init__.py  __main__.py  core.py  pack.list
examples/simple_plugin/myplugin/utils/: __init__.py  helper.py
pypacker/: __init__.py  __main__.py  pack.py
